2001-12-24  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.29pre1.

2001-12-23  Martin Weber <martweb@gmx.net>

	* README: updated.

	* NEWS: updated.

2001-12-24  Masatake YAMATO  <yamato@redhat.com>

	* fit.[ch] (fitted_splines): Pass width and height.
	
	* autotrace.[ch] (at_splines_write): Don't pass
	bbox. Get bbox from splines.

	* main.c (main): Don't pass width and height to 
	at_splines_write.
	
	* autotrace.h (struct _at_fitting_opts_type): Removed
	comments. Instead defined doc strings.
	(AT_DEFAULT_DPI): New def.
	(at_fitting_opts_doc): New macro.
	(struct _at_spline_list_array_type): Added height
	and width.

	* fit.c (new_fitting_opts): Remove comments.

	* main.c: used AT_DEFAULT_DPI.

	* strgicmp.c (strgnicmp): Added parentheses around
	conditions.
	(main): Added test.

	* output-fig.h: Move the defines to output-fig.c.

2001-12-23  Martin Weber <martweb@gmx.net>

	* output-cgm.c: Fix bugs.

	Message-ID: <3C25CDF4.4C0CC024@gmx.net>.
	
2001-12-23  Masatake YAMATO  <yamato@redhat.com>

	* main.c (main): Use at_splines_write, at_input_shortlist
	and at_output_shortlist.

	* output.h, input.h: Remove declarations. Move them to autotrace.h.

	* input.c (input_format_entry, input_formats): 
	Change the order of fields.

	* bitmap.c: Don't include string.h.

	* autotrace.[ch]: rename at_output_write to
	at_splines_write.
	(at_output_add_handler, at_input_add_handler):
	New stubs.

	* autotrace.c: Move input and output functions
	to input.c and output.c.

	* types.h (at_real_coord): Renamed from at_real_coordinate_type.
	(at_coord): Renamed from at_coordinate_type.
	Remove progress_func and testcancel_func.

	* *: Remove ptypes.h. 

2001-12-23  Masatake YAMATO  <yamato@redhat.com>

	* ptypes.h: Removed.

	* output-emf.c (WriteHeader): Move a global variable
	`editor' to here.

	* Makefile.am (libautotrace_a_SOURCES): Removed version.c.

	* version.c: Removed.

	* autotrace.c (at_version): Move all codes in version.c
	to here.
